Algumas alterações e inserção do shortcut icon

--- a/src/views/study.html
+++ b/src/views/study.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proffy | Sua plataforma de estudos online</title>
 
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/partials/header.css">
     <link rel="stylesheet" href="styles/partials/forms.css">
@@ -79,7 +80,7 @@
                     <p>Preço/hora <strong>R$ {{proffy.cost}}</strong>
                     </p>
                     <a href="https://api.whatsapp.com/send?1=pt_BR&phone=55{{proffy.whatsapp}}&text=
-                    Tenho interrese na aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
+                    Tenho interese na aula de {{proffy.subject}} {{proffy.name}}" class="button" target="_blank">
                         <img src="images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
                     </a>
                     </footer>
