--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#8257E5">
     <title>Proffy | Sua plataforma de estudos online</title>
 
-    <link rel="shortcut icon" href="web/public/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/partials/page-landing.css">
@@ -36,7 +36,7 @@
         </div>
 
         <p class="total-connections">
-            Total de 200 conexões relaizadas
+            Total de 200 conexões realizadas
             <img src="images/icons/purple-heart.svg" alt="Coração">
         </p>
     </div> 
